--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.1.1</version>
+				<version>2.1.1</version3.2.3
+						      >
 			</plugin>
 		</plugins>
 	</build>
